2001-09-20  Rob Browning  <rlb@defaultvalue.org>

	* .cvsignore: add version.h

	* versiondat.h.in: removed (obsolete).

	* version.h.in: renamed from version.h.
	(SCM_GUILE_MAJOR_VERSION): new public macro.
	(SCM_GUILE_MINOR_VERSION): new public macro.
	(SCM_GUILE_MICRO_VERSION): new public macro.

	* version.h: renamed to version.h.in.

	* version.c
	(scm_major_version): support integer *_VERSION macros.
	(scm_minor_version): support integer *_VERSION macros.
	(scm_micro_version): support integer *_VERSION macros.
	(scm_version): support integer *_VERSION macros.

2001-09-20  Mikael Djurfeldt  <mdj@linnaeus>

	* error.c, error.h: Made error keys globally accessible.
	Applications might want to test for these or use them in a direct
	call to scm_error.

	* num2integral.i.c (NUM2INTEGRAL): Report an error when these
	routines are passed an inexact.  This change in behavior is
	motivated by concordance with R5RS: It is more common that a
	primitive doesn't want to accept an inexact for an exact.

2001-09-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>

        The following patch partially undoes my patch from 2001-06-30,
	where I added the function scm_gc_mark_cell_conservatively.  The
	function is buggy, since it breaks guile during conservative
	marking if a pointer on the stack points directly into the list of
	free cells on the heap:  With conservative cell marking this will
	cause the whole free list to be scanned and marked - boom!

	* gc.c (allocated_mark, MARK, heap_segment,
	scm_gc_mark_cell_conservatively, scm_init_storage), gc.h
	(scm_gc_mark_cell_conservatively):  Remove function 
	scm_gc_mark_cell_conservatively and update the corresponding
	comments and uses accordingly.  Thanks to Christopher Cramer for
	the patch.  (Minor corrections by me.)

2001-09-15  Gary Houston  <ghouston@arglist.com>

	* root.h (scm_root_state): removed the continuation_stack and
	continuation_stack_ptr members, which have no apparent purpose.