@@ -1,3 +1,8 @@
+2001-09-20  Mikael Djurfeldt  <mdj@linnaeus>
+
+	* numbers.c (scm_integer_expt): Accept inexact integer in second
+	argument.  (Thanks to Bill Schottstaedt.)
+
 2001-09-20  Rob Browning  <rlb@defaultvalue.org>
 
 	* .cvsignore: add version.h
